update GetRoomsConnectionUrls method for single server types
